objects/Amortization_Schedule__c.object
<CustomObject>
    <description>This object stores month-level detail of a given amortization schedule</description>
    <label>Amortization Schedule by Month</label>
    <nameField>
        <displayFormat>ASBM-{0000}</displayFormat>
        <label>Amortization Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amortization Schedules by Month</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Year__c</fullName>
        <description>The year that this monthly schedule represents</description>
        <inlineHelpText>The year that this monthly schedule represents</inlineHelpText>
        <label>Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>The month of year that this monthly schedule represents</description>
        <inlineHelpText>The month of year that this monthly schedule represents</inlineHelpText>
        <label>Month</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be set to true once the amortization has been completed</description>
        <inlineHelpText>This checkbox will be set to true once the amortization has been completed</inlineHelpText>
        <label>Actual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Month_Year__c</fullName>
        <description>The month and year value</description>
        <formula>TEXT(Year__c) + &quot;-&quot;  + LPAD(TEXT(Month__c), 2, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The month and year value</inlineHelpText>
        <label>Schedule Month / Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amortization_Schedule__c</fullName>
        <description>This is the amortization schedule for which this monthly detail relates to</description>
        <inlineHelpText>This is the amortization schedule for which this monthly detail relates to</inlineHelpText>
        <label>Amortization Schedule</label>
        <referenceTo>rstk__soamort__c</referenceTo>
        <relationshipLabel>Amortization Schedules by Month</relationshipLabel>
        <relationshipName>Amortization_Schedules_by_Month</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>COGS_Amortization_Amount__c</fullName>
        <description>The amount of COGS to be amortized during the represented month</description>
        <inlineHelpText>The amount of COGS to be amortized during the represented month</inlineHelpText>
        <label>COGS Amortization Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Amortization_Amount__c</fullName>
        <description>The amount of revenue to be amortized during the represented month</description>
        <inlineHelpText>The amount of revenue to be amortized during the represented month</inlineHelpText>
        <label>Revenue Amortization Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>